--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     },
     "xo": {
       "rules": {
-        "linebreak-style": [
-          "error",
-          "windows"
-        ],
+        "linebreak-style": [ "error", "windows" ],
         "no-prototype-builtins": "warn",
         "radix": "warn",
-        "guard-for-in": "warn"
+        "guard-for-in": "warn",
+        "import/no-unresolved": "off",
+        "camelcase": "off",
+        "no-negated-condition": "warn"
       }
     },
     "scripts": {
